Fix poster authorship and improve category visibility with solid black text

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -703,12 +703,13 @@ footer.sticky-bottom {
   }
 
   h2.category {
-    color: var(--global-divider-color);
+    color: #000000;
     border-bottom: 1px solid var(--global-divider-color);
     padding-top: 0.5rem;
     margin-top: 2rem;
     margin-bottom: 1rem;
     text-align: right;
+    font-weight: bold;
   }
 }
 
@@ -734,11 +735,12 @@ footer.sticky-bottom {
   }
 
   h2.bibliography {
-    color: var(--global-divider-color);
+    color: #000000;
     border-top: 1px solid var(--global-divider-color);
     padding-top: 1rem;
     margin-top: 2rem;
     text-align: right;
+    font-weight: bold;
   }
 
   ol.bibliography {
@@ -778,6 +780,11 @@ footer.sticky-bottom {
 
       .title {
         font-weight: bolder;
+      }
+
+      .periodical {
+        color: #000000;
+        font-weight: normal;
       }
 
       .author {
